			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

08-May-2001
~~~~~~~~~~~
Updated French (Vincent Lefevre) and Hungarian (Andras Mohari) translations.

07-May-2001 (Release 1.1.3)
~~~~~~~~~~~
Updated the documentation.

06-May-2001
~~~~~~~~~~~
Added 'Huge, With...' display styles. In huge mode, normal icons are scaled
up if they're too small.

03-May-2001
~~~~~~~~~~~
Gtk styles can be overridden in <Choices>/ROX-Filer/Styles (suggested by
Stephen Watson).
Pinboards and panels should now work with IceWM without needing -o
(Christopher Arndt).
Allow text messages in the toolbar to go off the side (instead of resizing the
window).

02-May-2001
~~~~~~~~~~~
Opening the shell minibuffer with a selection adds ' "$@' after the cursor.
Without a selection, the name of the file under the cursor is added.

29-Apr-2001
~~~~~~~~~~~
Pressing the `\' key opens the menu (suggested by Christopher Arndt). Hold
down Ctrl for the File submenu.

28-Apr-2001
~~~~~~~~~~~
Added a new 'About' section to AppInfo. Any elements in here are added
into the info box. Added a 'Refresh' button to the info box.
Added a ROX-Filer/Styles file for default colours (default filer background
is now lighter).

27-Apr-2001
~~~~~~~~~~~
Rewrote the file info box. Looks a bit nicer, and it's easier to add extra
info to it later...

26-Apr-2001
~~~~~~~~~~~
Updated Russian translation (Dmitry Elfimov).

25-Apr-2001
~~~~~~~~~~~
AppInfo file may contain a <Summary> element - the text inside will be
displayed in a tooltip if the mouse is held over the item in a filer
window.

22-Apr-2001
~~~~~~~~~~~
Filer now looks for AppInfo.xml before AppMenu. This is for future
expansion...

18-Apr-2001
~~~~~~~~~~~
Automatic resizing of windows when changing directory is now optional
(requested by Paul E. Johnson and Andreas Thorn).

11-Apr-2001
~~~~~~~~~~~
The symlink box allows you to choose to create relative or absolute links
(suggested by Stephen Watson).

09-Apr-2001
~~~~~~~~~~~