@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+09-May-2001
+~~~~~~~~~~~
+When using 'From LANG', extract the language code from the string to get
+the filename, instead of using the whole string (Andras Mohari).
+
 08-May-2001
 ~~~~~~~~~~~
 Updated French (Vincent Lefevre) and Hungarian (Andras Mohari) translations.
